--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
          <img src="image/car.gif">
       </div>
    </div>
-   <footer>
+   <!-- <footer>
       <h1>COPYRIGHT</h1>
-   </footer>
+   </footer> -->
  </body>
  </html>
